[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seiltanzer"
version = "0.1.0"
description = "Seiltanzer Terminal — локальный дашборд поддержки решений для дискреционного трейдера"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "pandas>=2.1",
    "yfinance>=0.2.40",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
seiltanzer = "seiltanzer.__main__:main"

[tool.setuptools.packages.find]
include = ["seiltanzer*"]

[tool.setuptools.package-data]
seiltanzer = ["web/*", "web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
